# RunInLang

./: CMakeLists.txt  LICENSE.txt  README.md  README.txt  README_ja.txt  installer.iss  main.cpp  main_res.rc  resource.h  ril.cpp
lang/: en_US.rc  ja_JP.rc
